# anyrun

anyrun/src/: app.rs  main.rs
nix/modules/: home-manager.nix
plugins/shell/: Cargo.toml  README.md
plugins/shell/src/: history.rs  lib.rs
plugins/websearch/: README.md
plugins/websearch/src/: lib.rs
