[package]
name    = "shell"
version = "25.12.0"
edition = "2021"

[lib]
crate-type = [ "cdylib" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
abi_stable    = "0.11.1"
anyrun-plugin = { path = "../../anyrun-plugin" }
dirs          = "6.0.0"
fuzzy-matcher = "0.3.7"
indexmap      = { features = [ "serde" ], version = "2.12.1" }
ron           = "0.8.0"
serde         = { features = [ "derive" ], version = "1.0.228" }
serde_json    = "1.0.149"
